apply changes & add auth

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=dbHospital;Integrated Security=SSPI;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:3000",
+    "ValidIssuer": "http://localhost:5261",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   }
 }
